# wayland-wsegl

./: Makefile.am  README  configure.ac
include/powervr/: img_drm_fourcc.h  imgpixfmts.h  imgyuv.h  services_ext.h  wsegl.h
src/: waylandws.c  waylandws.h  waylandws_client.c  waylandws_client.h  waylandws_priv.h  waylandws_pvr.h  waylandws_pvrsrv.c  waylandws_server.c  waylandws_server.h
